--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <img id="product" src="img/2.png">
  <img id="product" src="img/3.png">
  <img id="product" src="img/4.png">
- <img class="main-link" href="Tomato all.html" id="product" src="img/5.png">
+ <img href="Tomato all.html" id="product" src="img/5.png">
  <img id="product" src="img/6.png">
  <img id="product" src="img/7.png">
 </div>
@@ -56,7 +56,7 @@
  <p id="ma_caption_4">Open field crop seeds</p>
  <p id="ma_text_4">wheat, cotton, legumes, hybrid confection, sunflower</p>
  <img id="image_5" src="img/image 5.png">
- <a class="main-link" href="Tomato all.html" id="ma_caption_5" >Vegetable seeds</a>
+ <a href="Tomato all.html" id="ma_caption_5" >Vegetable seeds</a>
  <p id="ma_text_5">hybrid open field tomatoes, eggplant, onion, paprika, etc.</p>
  <img id="image_3" src="img/image 3.png">
  <p id="ma_caption_3">Ornamental seeds</p>
