--- a/Tomato all.html
+++ b/Tomato all.html
@@ -70,7 +70,7 @@
  <div id="Tall_images">
  <img id="Tall_image" src="img/Group 9.png">
  <img id="Tall_image" src="img/Group 10.png">
- <img id="Tall_image" src="img/Group 11.png">
+ <a href="Tomato one.html"><img id="Tall_image" src="img/Group 11.png"></a>
  <img id="Tall_image" src="img/Group 12.png">
  <img id="Tall_image" src="img/Group 13.png">
  <img id="Tall_image" src="img/Group 14.png">
