--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <img id="product" src="img/2.png">
  <img id="product" src="img/3.png">
  <img id="product" src="img/4.png">
- <img href="Tomato all.html" id="product" src="img/5.png">
+ <a href="Tomato all.html"><img id="product" src="img/5.png"></a>
  <img id="product" src="img/6.png">
  <img id="product" src="img/7.png">
 </div>
