--- a/Tomato all.html
+++ b/Tomato all.html
@@ -4,6 +4,11 @@
 <title>Tomato all</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<script>
+function Tomato_one() {
+    window.location.href = 'Tomato one.html';
+}
+</script>
 </head>
 <body>
 <div id="main">
@@ -70,7 +75,9 @@
  <div id="Tall_images">
  <img id="Tall_image" src="img/Group 9.png">
  <img id="Tall_image" src="img/Group 10.png">
- <a href="Tomato one.html"><img id="Tall_image" src="img/Group 11.png"></a>
+
+ <img onclick="Tomato_one()" id="Tall_image" src="img/Group 11.png">
+
  <img id="Tall_image" src="img/Group 12.png">
  <img id="Tall_image" src="img/Group 13.png">
  <img id="Tall_image" src="img/Group 14.png">
