--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <title>Homepage</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<script>
+function Tomato_all() {
+    window.location.href = 'Tomato all.html';
+}
+</script>
 </head>
 <body>
 <div id="main">
@@ -29,7 +34,9 @@
  <img id="product" src="img/2.png">
  <img id="product" src="img/3.png">
  <img id="product" src="img/4.png">
- <a href="Tomato all.html"><img id="product" src="img/5.png"></a>
+
+ <img onclick="Tomato_all()" id="product" src="img/5.png">
+
  <img id="product" src="img/6.png">
  <img id="product" src="img/7.png">
 </div>
