--- a/Tomato all.html
+++ b/Tomato all.html
@@ -17,12 +17,12 @@ function Tomato_one() {
  <img id="ico_search" src="img/ico_search.png" onclick="click">
  <img id="line" src="img/Line 1.png">
  <div id="head_links">
-  <a id="head_link">Home</a>
+  <a id="head_link" href="index.html">Home</a>
   <a id="head_lLink">Company Profile</a>
-  <a id="head_link">Products</a>
+  <a id="head_link" href="Tomato all.html">Products</a>
   <a id="head_link">Services</a>
   <a id="head_link">R & D</a>
-  <a id="head_link">Contact</a>
+  <a id="head_link" href="Contact us.html">Contact</a>
  </div>
 <img id="Tall_banner" src="img/banner.png">
 <div id="Tall_main">
