--- a/Contact us.html
+++ b/Contact us.html
@@ -4,6 +4,7 @@
 <title>Contact us</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/adaptive.css">
 </head>
 <body>
 <div id="main">
@@ -48,7 +49,7 @@
   <p id="Cus_caption10">You are interested in<p>
   <input id="Cus_input10">
   <p id="Cus_caption11">Please type this code<p>
-  <img width="5%" height="30" id="Cus_image11" src="img/Cus_image.png">
+  <img id="Cus_image11" src="img/Cus_image.png">
   <input id="Cus_input11">
   <img id="Cus_button" src="img/Cus_button.png" onclick="click">
  </div>
