--- a/Tomato all.html
+++ b/Tomato all.html
@@ -4,6 +4,7 @@
 <title>Tomato all</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/adaptive.css">
 <script>
 function Tomato_one() {
     window.location.href = 'Tomato one.html';
