--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Homepage</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/adaptive.css">
 <script>
 function Tomato_all() {
     window.location.href = 'Tomato all.html';
@@ -20,7 +21,7 @@ function Tomato_all() {
  <div id="head_links">
   <a id="head_link" href="index.html">Home</a>
   <a id="head_lLink">Company Profile</a>
-  <a id="head_link" href="Tomato all.html">Products</a>
+  <a href="Tomato all.html" id="head_link" >Products</a>
   <a id="head_link">Services</a>
   <a id="head_link">R & D</a>
   <a id="head_link" href="Contact us.html">Contact</a>
