--- a/Tomato all.html
+++ b/Tomato all.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/adaptive.css">
+<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+<script src="js/main.js"></script>
 <script>
 function Tomato_one() {
     window.location.href = 'Tomato one.html';
@@ -25,9 +27,9 @@ function Tomato_one() {
   <a id="head_link">R & D</a>
   <a id="head_link" href="Contact us.html">Contact</a>
  </div>
-<img id="Tall_banner" src="img/banner.png">
+<img id="Tall_banner" src="img/Tall_banner.jpg">
 <div id="Tall_main">
- <div id="Tall_head">Agridera Fresh Market Tomato Hybrid</div>
+ <div id="Tall_head">Agridera Fresh Market Grape Hybrids</div>
  <p id="Tall_text">
  Agridera aims to be one of the world`s leading companies in the breeding, production, and marketing, of tomato seeds. We invest
  invensively in research and development to provide solutions to growers and consumers in numerous countries around the world.
@@ -81,9 +83,7 @@ function Tomato_one() {
 
  <img id="Tall_image" src="img/Group 12.png">
  <img id="Tall_image" src="img/Group 13.png">
- <img id="Tall_image" src="img/Group 14.png">
- <img id="Tall_image" src="img/Group 15.png">
- <img id="Tall_image" src="img/Group 16.png">
+
  </div>
 </div>
 
