--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ function Tomato_all() {
     window.location.href = 'Tomato all.html';
 }
 </script>
+<link rel="manifest" href="manifest.json">
 </head>
 <body>
 <div id="main">
