--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@ function Tomato_all() {
 }
 </script>
 <link rel="manifest" href="manifest.json">
+<script>
+    if ('serviceWorker' in navigator) {
+        navigator.serviceWorker
+        .register('/sw.js')
+        .then(function() {
+            console.log('Service worker registered!');
+        });
+    }
+</script>
 </head>
 <body>
 <div id="main">
