--- a/index.html
+++ b/index.html
@@ -12,11 +12,37 @@ function Tomato_all() {
 </script>
 <link rel="manifest" href="manifest.json">
 <script>
+      function askPermission() {
+        return new Promise(function(resolve, reject) {
+            const permissionResult = Notification.requestPermission(function(result) {
+            resolve(result);
+        });
+
+        if (permissionResult) {
+            permissionResult.then(resolve, reject);
+        }
+    })
+    .then(function(permissionResult) {
+        if (permissionResult !== 'granted') {
+            throw new Error('We weren\'t granted permission.');
+        }
+    });
+}
+
     if ('serviceWorker' in navigator) {
         navigator.serviceWorker
         .register('/sw.js')
         .then(function() {
             console.log('Service worker registered!');
+        });
+
+        navigator.serviceWorker.ready.then(registration => {
+            if ('PushManager' in window) {
+                document.querySelector('button.subscribe-for-push')
+                .addEventListener('click', () => {
+                    askPermission()
+                });
+            }
         });
     }
 </script>
@@ -103,5 +129,10 @@ function Tomato_all() {
 </div>
 
 </div>
+
+<button class="subscribe-for-push">
+    SUBSCRIBE FOR PUSH NOTIFICATIONS
+</button>
+
 </body>
 </html>
